--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,6 +1,6 @@
 <h1>List Puppy</h1>
 
-<form action="/" method="post">
+<form action="/new" method="post">
 Name: <input type="text" name="name"><br>
 Breed: <input type="text" name="breed"><br>
 Age: <input type="text" name="age"><br>
