--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -4,5 +4,5 @@
 Name: <input type="text" name="name"><br>
 Breed: <input type="text" name="breed"><br>
 Age: <input type="text" name="age"><br>
-<input type="submit" name="submit">
+<input type="submit" name="submit" value="submit">
 </form>
